1993
Not so sure there is a super clean solution here:
```scala
scala> implicit def int2days(x: Int) = new { def days = "int" }        
int2days: (x: Int)java.lang.Object{def days: java.lang.String}

scala> implicit def double2days(x: Double) = new { def days = "double" }
double2days: (x: Double)java.lang.Object{def days: java.lang.String}

scala> 1.days
<console>:1: error: Invalid literal number
       1.days
       ^

scala> 1. days
res0: java.lang.String = double

scala> 1 . days
res1: java.lang.String = int

scala> 1 .days
res2: java.lang.String = int
```
